--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
                 <div id="head-text" class="bold-text dynamic-gradient-text"> <!-- NOTE: utilisation d'id ? -->
                     <h1 class="very-large-text">Bastien Le Gall</h1>
-                    <h2 class="large-text">ce que je fais dans la vie en gros</h2>
+                    <h2 class="large-text">étudiant en informatique</h2>
                 </div>
 
                 <div id="contact">
@@ -64,23 +64,23 @@
                         <h2 class="larger-text bold-text gradient-text">Diplômes</h2>
                         <ul>
                             <li>
-                                <h3 class="large text">Diplôme National du Brevet</h3>
+                                <h3>Diplôme National du Brevet</h3>
                                 <p>Collège Henri Longchambon</p>
                                 <p>Admis Mention Très Bien, session 2018</p>
                             </li>
                             <li>
-                                <h3 class="large text">Diplôme du Baccalauréat Technologique</h3>
+                                <h3>Attestation d'engagement Lycéen et Collégien</h3>
+                                <p>Atteste de mon investissement dans la continuité pédagogique pendant la période de confinement de Mars 2020</p>
+                            </li>
+                            <li>
+                                <h3>Diplôme du Baccalauréat Technologique</h3>
                                 <p>Lycée La Martinière Monplaisir / 2018-2021</p>
                                 <p>Section STI2D, Admis Mention Très Bien, session 2021</p>
                             </li>
                             <li>
-                                <h3 class="large text">Bachelor Universitaire Technologique</h3>
+                                <h3>Bachelor Universitaire Technologique</h3>
                                 <p>IUT Lyon 1 / 2021/2024</p>
                                 <p>Cursus Informatique; diplôme en cours de préparation</p>
-                            </li>
-                            <li>
-                                <h3 class="large text">Attestation d'engagement Lycéen et Collégien</h3>
-                                <p>Atteste de mon investissement dans la continuité pédagogique pendant la période de confinement de Mars 2020</p>
                             </li>
                         </ul>
                     </article>
@@ -95,19 +95,28 @@
                         </ul>
                     </article>
 
-                    <article id="competences">
-                        <h2 class="larger-text bold-text gradient-text">Compétences</h2>
-                        <!-- <progress value="60" max="100"></progress>                           À retravailler -->
-                        <p>Python</p>
-                        <div class="bar"><div class="skill python" data-size="65"></div></div>
-                        <p>Suite Office</p>
-                        <div class="bar"><div class="skill office" data-size="80"></div></div>
-                        <p>HTML/CSS</p>
-                    </article>
-
+                    
                 </section>
 
-            </section>
+                <aside id="competences">
+                    <h2 class="medium-text gradient-text">Compétences</h2>
+                    <div id="progress-bars">
+                        <label>Hardware</label>
+                        <progress label="Hardware" value="90" max="100"></progress>
+                        <label>Suite Office</label>
+                        <progress value="80" max="100"></progress>
+                        <label>Python</label>
+                        <progress value="70" max="100"></progress>
+                        <label>BDD</label>
+                        <progress value="70" max="100"></progress>
+                        <label>HTML/CSS</label>
+                        <progress value="60" max="100"></progress>
+                        <label>C</label>
+                        <progress value="30" max="100"></progress>
+                    </div>
+                </section>
+                
+            </aside>
 
         </main>
     </div>
