Full revamp -- Added grid and removed progress bars

--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html lang="fr">
 
 <head>
-    <title>Projet CV</title>
-    <link rel="stylesheet" type="text/css" href="css/styles.css"> 
+    <title>CV Bastien Le Gall G3S1</title>
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="icon" type="image.png" href="images/pic.png">
 </head>
 
 <body>
     <div id="container">
         <main>
+
             <header>
 
                 <picture>
-                    <img src="images/pic.png" alt="">
+                    <img src="images/photo.png" alt="">
                 </picture>
 
-                <div id="head-text" class="bold-text dynamic-gradient-text"> <!-- NOTE: utilisation d'id ? -->
+                <div id="head-text" class="bold-text dynamic-gradient-text">
                     <h1 class="very-large-text">Bastien Le Gall</h1>
                     <h2 class="large-text">étudiant en informatique</h2>
                 </div>
@@ -35,11 +37,12 @@
                 </div>
 
             </header>
+
             <section id="under-header">
 
-                <aside>
+                <aside id="my-infos">
                     <article id="hobbies">
-                        <h2 class="gradient-text">Hobbies</h2>
+                        <h2 class="medium-text gradient-text">Hobbies</h2>
                         <ul>
                             <li>Rugby</li>
                             <li>Jeux Vidéos</li>
@@ -48,7 +51,7 @@
                         </ul>
                     </article>
                     <article id="languages">
-                        <h2 class="gradient-text">Langues</h2>
+                        <h2 class="medium-text gradient-text">Langues</h2>
                         <ul>
                             <li>Français [voltaire]</li>
                             <li>Anglais B2</li>
@@ -92,31 +95,66 @@
                                 <p>ENS Lyon</p>
                                 <p>Stage dans la section EducTice de l'ifé, 2018</p>
                             </li>
+                            <li>
+                                <h3>Lorem ipsum dolor sit amet</h3>
+                                <p>???</p>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est accusamus ipsum officiis nam, veritatis placeat earum dicta expedita similique aliquam nisi et ullam rerum quis accusantium nulla, sed praesentium.</p>
+                            </li>
+                            <li>
+                                <h3>Lorem ipsum dolor sit amet</h3>
+                                <p>???</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos repellat est provident doloribus, nulla, nihil perferendis rerum praesentium autem doloremque facilis quo consectetur atque recusandae. Aut, ea? Fugit,
+                                    atque? Ab.</p>
+                            </li>
                         </ul>
                     </article>
 
-                    
                 </section>
 
                 <aside id="competences">
                     <h2 class="medium-text gradient-text">Compétences</h2>
-                    <div id="progress-bars">
-                        <label>Hardware</label>
-                        <progress label="Hardware" value="90" max="100"></progress>
-                        <label>Suite Office</label>
-                        <progress value="80" max="100"></progress>
-                        <label>Python</label>
-                        <progress value="70" max="100"></progress>
-                        <label>BDD</label>
-                        <progress value="70" max="100"></progress>
-                        <label>HTML/CSS</label>
-                        <progress value="60" max="100"></progress>
-                        <label>C</label>
-                        <progress value="30" max="100"></progress>
-                    </div>
-                </section>
-                
-            </aside>
+                    <ul>
+                        <li>
+                            <h3>Hardware</h3>
+                            <p>Connaissances avancées en montage/conception d'ordinateurs</p>
+                            <!-- <p>Montage d'ordinateurs</p>
+                            <p>Connaissances théoriques poussées</p> -->
+                        </li>
+                        <li>
+                            <h3>Réseaux</h3>
+                            <p>[FUTUR: Certif. Cisco]</p>
+                        </li>
+                        <li>
+                            <h3>Python</h3>
+                            <p>Développement d'un bot Discord (~1900 lignes) et de plusieurs petites applications</p>
+                            <!-- <p>Création d'un bot Discord poussé (~1900 lignes de code)</p>
+                            <p>Création de divers petits scripts (suivi d'une cryptomonnaie par SMS, chronomètre du
+                                temps passé à travailler...)</p> -->
+                        </li>
+
+                        <li>
+                            <h3>Bases de données</h3>
+                            <p>Connaissances intermédiaires en SQL, phpMyAdmin</p>
+                            <!-- <p>Gestion d'une base de données dans le cadre du développement de mon bot Discord personnel
+                            </p>
+                            <p>Connaissances intermédiaires du langage SQL</p> -->
+                        </li>
+                        <li>
+                            <h3>Web/h3>
+                                <p>Connaissances intermédiaires en HTML/CSS</p>
+                                <!-- <p>Conception du CV entièrement en HTML/CSS</p> -->
+                        </li>
+                        <li>
+                            <h3>Langage C</h3>
+                            <p>Conaissances naissantes (?????)</p>
+                            <!-- <p>Création d'un annuaire dans le cadre d'un projet noté</p> -->
+                        </li>
+                    </ul>
+                </aside>
+
+            </section>
+
 
         </main>
     </div>
