--- a/index.html
+++ b/index.html
@@ -118,8 +118,6 @@
                         <li>
                             <h3>Hardware</h3>
                             <p>Connaissances avancées en montage/conception d'ordinateurs</p>
-                            <!-- <p>Montage d'ordinateurs</p>
-                            <p>Connaissances théoriques poussées</p> -->
                         </li>
                         <li>
                             <h3>Réseaux</h3>
@@ -128,27 +126,19 @@
                         <li>
                             <h3>Python</h3>
                             <p>Développement d'un bot Discord (~1900 lignes) et de plusieurs petites applications</p>
-                            <!-- <p>Création d'un bot Discord poussé (~1900 lignes de code)</p>
-                            <p>Création de divers petits scripts (suivi d'une cryptomonnaie par SMS, chronomètre du
-                                temps passé à travailler...)</p> -->
                         </li>
 
                         <li>
                             <h3>Bases de données</h3>
                             <p>Connaissances intermédiaires en SQL, phpMyAdmin</p>
-                            <!-- <p>Gestion d'une base de données dans le cadre du développement de mon bot Discord personnel
-                            </p>
-                            <p>Connaissances intermédiaires du langage SQL</p> -->
                         </li>
                         <li>
-                            <h3>Web/h3>
-                                <p>Connaissances intermédiaires en HTML/CSS</p>
-                                <!-- <p>Conception du CV entièrement en HTML/CSS</p> -->
+                            <h3>Web</h3>
+                            <p>Connaissances intermédiaires en HTML/CSS</p>
                         </li>
                         <li>
                             <h3>Langage C</h3>
                             <p>Conaissances naissantes (?????)</p>
-                            <!-- <p>Création d'un annuaire dans le cadre d'un projet noté</p> -->
                         </li>
                     </ul>
                 </aside>
