Full revamp fix #2

--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
             <header>
 
                 <picture>
-                    <img src="images/photo.png" alt="">
+                    <img src="images/pic.png" alt="">
                 </picture>
 
                 <div id="head-text" class="bold-text dynamic-gradient-text">
-                    <h1 class="very-large-text">Bastien Le Gall</h1>
-                    <h2 class="large-text">étudiant en informatique</h2>
+                    <h1>Bastien Le Gall</h1>
+                    <h2>étudiant en informatique</h2>
                 </div>
 
                 <div id="contact">
-                    <h1 class="large-text dynamic-gradient-text">Contact</h1>
+                    <h1 class="xxx-large-text dynamic-gradient-text">Contact</h1>
 
                     <ul id="contact-content">
-                        <li class="medium-text">N° téléphone:</li>
+                        <li>N° téléphone:</li>
                         <li>00-07-77-77-77</li>
-                        <li class="medium-text">Mail:</li>
+                        <li>Mail:</li>
                         <li>bastien.le-gall@etu.univ-lyon1.fr</li>
-                        <li class="medium-text">Adresse:</li>
+                        <li>Adresse:</li>
                         <li>million, liberté... sheesh</li>
                     </ul>
 
@@ -42,7 +42,7 @@
 
                 <aside id="my-infos">
                     <article id="hobbies">
-                        <h2 class="medium-text gradient-text">Hobbies</h2>
+                        <h2 class="gradient-text">Hobbies</h2>
                         <ul>
                             <li>Rugby</li>
                             <li>Jeux Vidéos</li>
@@ -51,7 +51,7 @@
                         </ul>
                     </article>
                     <article id="languages">
-                        <h2 class="medium-text gradient-text">Langues</h2>
+                        <h2 class="gradient-text">Langues</h2>
                         <ul>
                             <li>Français [voltaire]</li>
                             <li>Anglais B2</li>
@@ -64,7 +64,7 @@
                 <section id="main-content">
 
                     <article id="diplomes">
-                        <h2 class="larger-text bold-text gradient-text">Diplômes</h2>
+                        <h2 class="bold-text gradient-text">Diplômes</h2>
                         <ul>
                             <li>
                                 <h3>Diplôme National du Brevet</h3>
@@ -73,7 +73,8 @@
                             </li>
                             <li>
                                 <h3>Attestation d'engagement Lycéen et Collégien</h3>
-                                <p>Atteste de mon investissement dans la continuité pédagogique pendant la période de confinement de Mars 2020</p>
+                                <p>Atteste de mon investissement dans la continuité pédagogique pendant la période de
+                                    confinement de Mars 2020</p>
                             </li>
                             <li>
                                 <h3>Diplôme du Baccalauréat Technologique</h3>
@@ -99,12 +100,16 @@
                                 <h3>Lorem ipsum dolor sit amet</h3>
                                 <p>???</p>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est accusamus ipsum officiis nam, veritatis placeat earum dicta expedita similique aliquam nisi et ullam rerum quis accusantium nulla, sed praesentium.</p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto est accusamus ipsum
+                                    officiis nam, veritatis placeat earum dicta expedita similique aliquam nisi et ullam
+                                    rerum quis accusantium nulla, sed praesentium.</p>
                             </li>
                             <li>
                                 <h3>Lorem ipsum dolor sit amet</h3>
                                 <p>???</p>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos repellat est provident doloribus, nulla, nihil perferendis rerum praesentium autem doloremque facilis quo consectetur atque recusandae. Aut, ea? Fugit,
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos repellat est
+                                    provident doloribus, nulla, nihil perferendis rerum praesentium autem doloremque
+                                    facilis quo consectetur atque recusandae. Aut, ea? Fugit,
                                     atque? Ab.</p>
                             </li>
                         </ul>
@@ -113,28 +118,31 @@
                 </section>
 
                 <aside id="competences">
-                    <h2 class="medium-text gradient-text">Compétences</h2>
+                    <h2 class="large-text bold-text gradient-text">Compétences</h2>
                     <ul>
                         <li>
                             <h3>Hardware</h3>
-                            <p>Connaissances avancées en montage/conception d'ordinateurs</p>
+                            <p>Connaissances avancées en montage et conception d'ordinateurs fixes</p>
+                            <p>Montage et maintenance de mon PC personnel</p>
+                        </li>
+                        <li>
+                            <h3>Python</h3>
+                            <p>Connaissances avancées </p>
+                            <p>Développement d'un bot Discord (~1900 lignes) et de plusieurs
+                                petites applications</p>
                         </li>
                         <li>
                             <h3>Réseaux</h3>
                             <p>[FUTUR: Certif. Cisco]</p>
                         </li>
                         <li>
-                            <h3>Python</h3>
-                            <p>Développement d'un bot Discord (~1900 lignes) et de plusieurs petites applications</p>
-                        </li>
-
-                        <li>
                             <h3>Bases de données</h3>
                             <p>Connaissances intermédiaires en SQL, phpMyAdmin</p>
                         </li>
                         <li>
                             <h3>Web</h3>
-                            <p>Connaissances intermédiaires en HTML/CSS</p>
+                            <p>Connaissances intermédiaires en HTML/CSS & en Design</p>
+                            <p>Concepton complète de ce CV</p>
                         </li>
                         <li>
                             <h3>Langage C</h3>
