Full revamp fix #2.1

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 </section>
 
                 <aside id="competences">
-                    <h2 class="large-text bold-text gradient-text">Compétences</h2>
+                    <h2 class="large-text gradient-text">Compétences</h2>
                     <ul>
                         <li>
                             <h3>Hardware</h3>
