Header picture and competences aside UI revamp

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 
 <head>
-    <title>Projet CV</title>
+    <title>CV Bastien Le Gall G3S1</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 
@@ -12,7 +12,7 @@
             <header class="bold-text">
 
                 <picture>
-                    <img src="images/pic.png" alt="">
+                    <img src="images/photo.png" alt="">
                 </picture>
 
                 <div id="head-text" class="bold-text dynamic-gradient-text">
