Minor changes + started commenting/cleaning up the code

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <header class="bold-text">
 
                 <picture>
-                    <img src="images/photo.png" alt="">
+                    <img src="images/photo.png" alt="thicc ye">
                 </picture>
 
                 <div id="head-text" class="bold-text dynamic-gradient-text">
@@ -68,7 +68,7 @@
                         <ul>
                             <li>
                                 <h3>Diplôme National du Brevet</h3>
-                                <p>Collège Henri Longchambon</p>
+                                <p>Collège Henri Longchambon / 2018</p>
                                 <p>Admis Mention Très Bien, session 2018</p>
                             </li>
                             <li>
@@ -80,6 +80,11 @@
                                 <h3>Diplôme du Baccalauréat Technologique</h3>
                                 <p>Lycée La Martinière Monplaisir / 2018-2021</p>
                                 <p>Section STI2D, Admis Mention Très Bien, session 2021</p>
+                            </li>
+                            <li>
+                                <h3>Concours Général</h3>
+                                <p>Lycée La Martinière Monplaisir / 2021</p>
+                                <p>Inscrit au Concours Général, section 2I2D</p>
                             </li>
                             <li>
                                 <h3>Bachelor Universitaire Technologique</h3>
@@ -123,9 +128,9 @@
                         <label>C</label>
                         <progress value="30" max="100"></progress>
                     </div>
-            </section>
+                </aside>
 
-            </aside>
+            </section>
 
         </main>
     </div>
